infra/cdk.out/VpcStack.template.json
{
 "Resources": {
  "FactCheckerVpcC99A0514": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/FactCheckerVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/Resource"
   }
  },
  "FactCheckerVpcPublicSubnet1Subnet8A81CA93": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/FactCheckerVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "FactCheckerVpcC99A0514"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PublicSubnet1/Subnet"
   }
  },
  "FactCheckerVpcPublicSubnet1RouteTable9CBF6F58": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/FactCheckerVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "FactCheckerVpcC99A0514"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PublicSubnet1/RouteTable"
   }
  },
  "FactCheckerVpcPublicSubnet1RouteTableAssociation80680AD6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FactCheckerVpcPublicSubnet1RouteTable9CBF6F58"
    },
    "SubnetId": {
     "Ref": "FactCheckerVpcPublicSubnet1Subnet8A81CA93"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "FactCheckerVpcPublicSubnet1DefaultRouteF92DBEFF": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "FactCheckerVpcIGW796F121C"
    },
    "RouteTableId": {
     "Ref": "FactCheckerVpcPublicSubnet1RouteTable9CBF6F58"
    }
   },
   "DependsOn": [
    "FactCheckerVpcVPCGW7025714C"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "FactCheckerVpcPublicSubnet1EIP1277C360": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/FactCheckerVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PublicSubnet1/EIP"
   }
  },
  "FactCheckerVpcPublicSubnet1NATGatewayE1AB05C5": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "FactCheckerVpcPublicSubnet1EIP1277C360",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "FactCheckerVpcPublicSubnet1Subnet8A81CA93"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/FactCheckerVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "FactCheckerVpcPublicSubnet1DefaultRouteF92DBEFF",
    "FactCheckerVpcPublicSubnet1RouteTableAssociation80680AD6"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PublicSubnet1/NATGateway"
   }
  },
  "FactCheckerVpcPublicSubnet2SubnetB9725B59": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/FactCheckerVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "FactCheckerVpcC99A0514"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PublicSubnet2/Subnet"
   }
  },
  "FactCheckerVpcPublicSubnet2RouteTableAD0DCC85": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/FactCheckerVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "FactCheckerVpcC99A0514"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PublicSubnet2/RouteTable"
   }
  },
  "FactCheckerVpcPublicSubnet2RouteTableAssociation27E62FA1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FactCheckerVpcPublicSubnet2RouteTableAD0DCC85"
    },
    "SubnetId": {
     "Ref": "FactCheckerVpcPublicSubnet2SubnetB9725B59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "FactCheckerVpcPublicSubnet2DefaultRoute17891FE4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "FactCheckerVpcIGW796F121C"
    },
    "RouteTableId": {
     "Ref": "FactCheckerVpcPublicSubnet2RouteTableAD0DCC85"
    }
   },
   "DependsOn": [
    "FactCheckerVpcVPCGW7025714C"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "FactCheckerVpcPrivateSubnet1Subnet3D6204A2": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/FactCheckerVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "FactCheckerVpcC99A0514"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PrivateSubnet1/Subnet"
   }
  },
  "FactCheckerVpcPrivateSubnet1RouteTableDE9EC081": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/FactCheckerVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "FactCheckerVpcC99A0514"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PrivateSubnet1/RouteTable"
   }
  },
  "FactCheckerVpcPrivateSubnet1RouteTableAssociationCD8917EF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FactCheckerVpcPrivateSubnet1RouteTableDE9EC081"
    },
    "SubnetId": {
     "Ref": "FactCheckerVpcPrivateSubnet1Subnet3D6204A2"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "FactCheckerVpcPrivateSubnet1DefaultRoute419BDB96": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "FactCheckerVpcPublicSubnet1NATGatewayE1AB05C5"
    },
    "RouteTableId": {
     "Ref": "FactCheckerVpcPrivateSubnet1RouteTableDE9EC081"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "FactCheckerVpcPrivateSubnet2Subnet081E41A6": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/FactCheckerVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "FactCheckerVpcC99A0514"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PrivateSubnet2/Subnet"
   }
  },
  "FactCheckerVpcPrivateSubnet2RouteTable76B6718D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/FactCheckerVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "FactCheckerVpcC99A0514"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PrivateSubnet2/RouteTable"
   }
  },
  "FactCheckerVpcPrivateSubnet2RouteTableAssociation09F23C2A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FactCheckerVpcPrivateSubnet2RouteTable76B6718D"
    },
    "SubnetId": {
     "Ref": "FactCheckerVpcPrivateSubnet2Subnet081E41A6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "FactCheckerVpcPrivateSubnet2DefaultRouteB1C715E4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "FactCheckerVpcPublicSubnet1NATGatewayE1AB05C5"
    },
    "RouteTableId": {
     "Ref": "FactCheckerVpcPrivateSubnet2RouteTable76B6718D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "FactCheckerVpcIGW796F121C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/FactCheckerVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/IGW"
   }
  },
  "FactCheckerVpcVPCGW7025714C": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "FactCheckerVpcIGW796F121C"
    },
    "VpcId": {
     "Ref": "FactCheckerVpcC99A0514"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerVpc/VPCGW"
   }
  },
  "FactCheckerCluster1157DDD7": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterSettings": [
     {
      "Name": "containerInsights",
      "Value": "enabled"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/FactCheckerCluster/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/02OwQrCMBBEv8V7Glv1B0oR8SKhildJ0xVXYyLNRiml/25iqxUW5u0w7M6CZ6uUpzP5comqb4nGind7kurGgnXqQC14d3woVpzNURRM+Eqj2vvKAEVvotJ6goOsNEz+5OXOWYWS0JpfOMJ6K6LsJG0kwUu2TDT4DDgd3hqCJvA3MDQZt5xC18sdDPUMlONdob0L+Zgase9ZCc76Rn0+/nNhTY2xU89ESxdr5kuehclmV4eYNN4Q3oGXg74BIhoBLCwBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Outputs": {
  "ExportsOutputRefFactCheckerVpcPrivateSubnet1Subnet3D6204A251DFA624": {
   "Value": {
    "Ref": "FactCheckerVpcPrivateSubnet1Subnet3D6204A2"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefFactCheckerVpcPrivateSubnet1Subnet3D6204A251DFA624"
   }
  },
  "ExportsOutputRefFactCheckerVpcPrivateSubnet2Subnet081E41A6B36DE5BB": {
   "Value": {
    "Ref": "FactCheckerVpcPrivateSubnet2Subnet081E41A6"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefFactCheckerVpcPrivateSubnet2Subnet081E41A6B36DE5BB"
   }
  },
  "ExportsOutputRefFactCheckerVpcC99A05149AE931D6": {
   "Value": {
    "Ref": "FactCheckerVpcC99A0514"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefFactCheckerVpcC99A05149AE931D6"
   }
  },
  "ExportsOutputRefFactCheckerVpcPublicSubnet1Subnet8A81CA937651A023": {
   "Value": {
    "Ref": "FactCheckerVpcPublicSubnet1Subnet8A81CA93"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefFactCheckerVpcPublicSubnet1Subnet8A81CA937651A023"
   }
  },
  "ExportsOutputRefFactCheckerVpcPublicSubnet2SubnetB9725B598DFA834B": {
   "Value": {
    "Ref": "FactCheckerVpcPublicSubnet2SubnetB9725B59"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefFactCheckerVpcPublicSubnet2SubnetB9725B598DFA834B"
   }
  },
  "ExportsOutputRefFactCheckerCluster1157DDD732BF6195": {
   "Value": {
    "Ref": "FactCheckerCluster1157DDD7"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefFactCheckerCluster1157DDD732BF6195"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
